--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 </head>
 <div class="app">
     <header class="app_header">
-        <img src="./asset/img/index2__header.jpg" alt="" class="header__img">
+        <img src="./asset/img/index2__header.jpg" alt="" class="header__img-index2">
         <nav class="header__nav">
             <div class="grid wide">
                 <ul class="header__nav-list">
