--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <button class="btn">BOOK NOW</button>
                 </nav>      
             <!-- </div> -->
-            <div class="grid header__search-holiday">
+            <div class="header__search-holiday">
                  <div class="header__heading-event">
                      <div class="header__heading-event-holiday">
                          <h1 class="heading__heading-text1">Search your next Holiday</h1>
