--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRAVEL-KIMCA</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="/shoppe-kimca/assets/img/anhshoppe.png" type="image/gif" sizes="40x40">
-        <link rel="stylesheet" href="asset/font/fontawesome-free-5.15.4-web/css/all.min.css">
-        <link rel="icon" type="image/png" href="/asset/img/favicon.ico" sizes="64x64">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="asset/font/fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="shortcut icon" href="/kimca/asset/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./asset/css/base.css">
     <link rel="stylesheet" href="./asset/css/main.css">
-     <link rel="stylesheet" href="./asset/css/grid.css">
+    <link rel="stylesheet" href="./asset/css/grid.css">
     <link rel="stylesheet" href="./asset/css/resposive.css">
 </head>
 <body>
